crates/oxc_linter/src/snapshots/react_no_did_update_set_state.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:13]
 3 │           componentDidUpdate: function() {
 4 │             this.setState({
   ·             ─────────────
 5 │               name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:13]
 3 │           componentDidUpdate: function componentDidUpdate() {
 4 │             this.setState({
   ·             ─────────────
 5 │               name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:13]
 3 │           componentDidUpdate() {
 4 │             this.setState({
   ·             ─────────────
 5 │               name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:13]
 3 │           componentDidUpdate = () => {
 4 │             this.setState({
   ·             ─────────────
 5 │               name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:13]
 3 │           componentDidUpdate: function() {
 4 │             this.setState({ data: 1 });
   ·             ─────────────
 5 │             someClass.onSomeEvent(function(data) {
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:15]
 4 │             if (true) {
 5 │               this.setState({ data: 123 });
   ·               ─────────────
 6 │             }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:15]
 4 │             if (true) {
 5 │               this.setState({ data: 123 });
   ·               ─────────────
 6 │             }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ eslint-plugin-react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:30]
 3 │           componentDidUpdate() {
 4 │             const x = true ? this.setState({ data: 123 }) : null;
   ·                              ─────────────
 5 │           }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.
